--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^15.4.2",
     "react-helmet": "^5.0.0-beta",
     "react-router-dom": "^4.0.0",
-    "serve": "^5.0.3"
+    "serve": "^5.0.3",
+    "styled-components": "^1.4.4"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
