--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jackwreid",
-  "version": "0.1.0",
+  "name": "jackreid.xyz",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "react": "^15.4.2",
@@ -9,6 +9,9 @@
     "react-router-dom": "^4.0.0",
     "serve": "^5.0.3",
     "styled-components": "^1.4.4"
+  },
+  "now": {
+    "alias": "jackreid.xyz"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
