--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-helmet": "^5.0.0-beta",
-    "react-router-dom": "^4.0.0",
-    "serve": "^5.0.3",
-    "styled-components": "^1.4.4"
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-helmet": "^5.1.3",
+    "react-router-dom": "^4.1.1",
+    "serve": "^5.1.5",
+    "styled-components": "^1.4.6"
   },
   "now": {
     "alias": "jackreid.xyz"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "^1.0.0"
   },
   "scripts": {
     "start": "serve ./build --single",
