--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "contentful": "^4.4.2",
+    "marked": "^0.3.6",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-helmet": "^5.1.3",
@@ -12,9 +14,9 @@
   },
   "now": {
     "alias": [
-			"jackreid.xyz",
-			"jackwreid.uk"
-		]
+      "jackreid.xyz",
+      "jackwreid.uk"
+    ]
   },
   "devDependencies": {
     "react-scripts": "^1.0.0"
