Remove old alias

--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
   },
   "now": {
     "alias": [
-      "jackreid.xyz",
-      "jackwreid.uk"
-    ]
+			"jackreid.xyz"
+		]
   },
   "devDependencies": {
     "react-scripts": "^1.0.0"
