--- a/package.json
+++ b/package.json
@@ -1,32 +1,45 @@
 {
   "name": "jackreid.xyz",
+  "description": "Personal website",
   "version": "1.0.0",
-  "private": true,
   "dependencies": {
-    "contentful": "^4.4.2",
-    "date-fns": "^1.28.5",
-    "marked": "^0.3.6",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-helmet": "^5.1.3",
-    "react-router-dom": "^4.1.1",
-    "serve": "^5.1.5",
-    "styled-components": "^1.4.6"
-  },
-  "now": {
-    "alias": [
-      "jackreid.xyz",
-      "jackwreid.uk"
-    ]
+    "gatsby": "^1.8.12",
+    "gatsby-link": "^1.6.8",
+    "gatsby-plugin-google-analytics": "^1.0.4",
+    "gatsby-plugin-manifest": "^1.0.4",
+    "gatsby-plugin-offline": "^1.0.4",
+    "gatsby-plugin-preact": "^1.0.3",
+    "gatsby-plugin-react-helmet": "^1.0.3",
+    "gatsby-plugin-sharp": "^1.6.2",
+    "gatsby-plugin-styled-components": "^2.0.2",
+    "gatsby-remark-copy-linked-files": "^1.5.2",
+    "gatsby-remark-images": "^1.5.4",
+    "gatsby-remark-prismjs": "^1.2.1",
+    "gatsby-remark-responsive-iframe": "^1.4.3",
+    "gatsby-remark-smartypants": "^1.4.3",
+    "gatsby-source-filesystem": "^1.4.3",
+    "gatsby-transformer-remark": "^1.7.1",
+    "gatsby-transformer-sharp": "^1.6.1",
+    "lodash": "^4.15.0",
+    "serve": "^6.4.1",
+    "styled-components": "^2.2.3"
   },
   "devDependencies": {
-    "react-scripts": "^1.0.0"
+    "gh-pages": "^0.12.0",
+    "prettier": "^1.6.1"
+  },
+  "now": {
+    "alias": ["jackreid.xyz", "jackwreid.uk"]
   },
   "scripts": {
-    "start": "serve ./build --single",
-    "build": "react-scripts build",
-    "dev": "react-scripts start",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "serve ./public --single",
+    "dev": "gatsby develop",
+    "lint":
+      "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format":
+      "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
+    "develop": "gatsby develop",
+    "build": "gatsby build"
   }
 }
