--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "prettier": "^1.6.1"
   },
   "now": {
-    "alias": ["jackreid.xyz"]
+    "alias": [
+      "jackreid.xyz"
+    ]
   },
   "scripts": {
     "start": "serve ./public --single",
     "dev": "gatsby develop",
-    "lint":
-      "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
+    "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format":
-      "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
     "develop": "gatsby develop",
     "build": "gatsby build"
   }
