--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "dev": "gatsby develop",
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
+    "format": "prettier --trailing-comma --single-quote --write 'src/**/*.js'",
     "develop": "gatsby develop",
     "build": "gatsby build"
   }
