--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   publish = "public"
-  command = "hugo"
-  functions = "./functions"
+  command = "./build.sh"
+  functions = "./functions-build"
