--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "netlify-lambda build functions",
     "lambdas": "netlify-lambda serve functions-source"
   },
   "repository": {
