--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "netlify dev",
     "build-functions": "netlify-lambda build functions",
     "serve-functions": "netlify-lambda serve functions"
   },
@@ -21,7 +22,10 @@
   "homepage": "https://github.com/JackWReid/personal-website#readme",
   "dependencies": {
     "axios": "^0.19.0",
-    "cheerio": "^1.0.0-rc.3",
+    "cheerio": "^1.0.0-rc.3"
+  },
+  "devDependencies": {
+    "netlify-cli": "^2.12.0",
     "netlify-lambda": "^1.5.0"
   }
 }
