--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,11 @@
 backend:
   name: git-gateway
   branch: master
-  media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
-  public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
+
+site_url: "https://jackreid.xyz"
+media_folder: "static/images/uploads"
+public_folder: "/images/uploads"
+
 collections:
   - name: note
     label: Note
@@ -10,22 +13,22 @@ collections:
     create: true
     slug: "{{year}}-{{month}}-{{day}}T{{hour}}-{{minute}}-{{second}}"
     fields:
-      - {label:"Title", name:"title", widget: "string"}
-      - {label:"Slug", name:"slug", widget: "string"}
-      - {label:"Date", name:"date", widget: "datetime"}
-      - {label:"Draft", name:"draft", widget: "boolean"}
-      - {label:"Tags", name:"tags", widget: "list"}
-      - {label: "Body", name: "body", widget: "markdown"}
-  - name: post
-    label: Post
-    folder: "content/post"
-    create: true
-    slug: "{{year}}-{{month}}-{{day}}T{{hour}}-{{minute}}-{{second}}"
-    fields:
-      - {label:"Title", name:"title", widget: "string"}
-      - {label:"Subtitle", name:"subtitle", widget: "string"}
-      - {label:"Slug", name:"slug", widget: "string"}
-      - {label:"Date", name:"date", widget: "datetime"}
-      - {label:"Draft", name:"draft", widget: "boolean"}
-      - {label:"Tags", name:"tags", widget: "list"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - { label: "Title", name:"title", widget: "string" }
+      - { label:"Slug", name:"slug", widget: "string" }
+      - { label:"Date", name:"date", widget: "datetime" }
+      - { label:"Draft", name:"draft", widget: "boolean" }
+      - { label:"Tags", name:"tags", widget: "list" }
+      - { label: "Body", name: "body", widget: "markdown" }
+      - name: post
+        label: Post
+        folder: "content/post"
+        create: true
+        slug: "{{year}}-{{month}}-{{day}}T{{hour}}-{{minute}}-{{second}}"
+        fields:
+          - { label:"Title", name:"title", widget: "string" }
+          - { label:"Subtitle", name:"subtitle", widget: "string" }
+          - { label:"Slug", name:"slug", widget: "string" }
+          - { label:"Date", name:"date", widget: "datetime" }
+          - { label:"Draft", name:"draft", widget: "boolean" }
+          - { label:"Tags", name:"tags", widget: "list" }
+          - { label: "Body", name: "body", widget: "markdown" }
