--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,7 +14,7 @@ collections:
     slug: "{{year}}-{{month}}-{{day}}T{{hour}}-{{minute}}-{{second}}"
     fields:
       - { label: "Date", name: "date", widget: "datetime" }
-      - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Title", name: "title", widget: "string" }
   - name: post
     label: Post
     folder: "content/post"
